fix untimely banner__subtitle wrapping

--- a/source/styles/modules/header/banner.styl
+++ b/source/styles/modules/header/banner.styl
@@ -12,6 +12,14 @@
     +above($bp)
       p-y: $gap
 
+  &__subtitles
+    +above($bp)
+      fxbx(x)
+
+  &__subtitle:first-of-type
+    +above($bp)
+      p-e: 0.5em
+
   &__logo
     width: 75%
     max-width: 600px
